<resources>
    <string name="app_name">Weather</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="server_port">Port</string>
    <string name="client_port">Port</string>
    <string name="server_connect">Connect</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="get_weather">Get Weather</string>
</resources>
